unpackaged/main/default/objects/Order/fields/Order_Release_1__c.field-meta.xml
<CustomField>
    <fullName>Order_Release_1__c</fullName>
    <label>Order Release 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>