unpackaged/main/default/objects/Order/fields/Order_Release_2__c.field-meta.xml
<CustomField>
    <fullName>Order_Release_2__c</fullName>
    <label>Order Release 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>